:arrow_up: 1.0.0 :tada:

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "bin": {
+    "google-font-downloader": "bin/google-font-downloader.js"
+  },
   "name": "google-font-downloader",
   "description": "Download Google fonts by providing the url",
   "keywords": [
@@ -40,5 +43,36 @@
   },
   "bugs": {
     "url": "https://github.com/IonicaBizau/google-font-downloader/issues"
+  },
+  "dependencies": {
+    "match-all": "^1.2.4",
+    "streamp": "^2.2.8",
+    "tilda": "^4.4.13",
+    "tinyreq": "^3.4.0"
+  },
+  "blah": {
+    "description": [
+      {
+        "h4": "Usage"
+      },
+      {
+        "p": "You can use this tool to download Google Fonts for offline use, just by providing the Google APIs url."
+      },
+      {
+        "p": ":bulb: **Note**: It's not clear yet if Google Fonts are EU GDPR compliant (see [this issue](https://github.com/google/fonts/issues/1495)). This may be a good reason to download the Google Fonts you use on your server."
+      },
+      {
+        "h4": "How it works"
+      },
+      {
+        "p": "You need to provide the url to the Google APIs endpoint (e.g. `https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i`) and you will get the following files/directories in the current working directory:"
+      },
+      {
+        "ul": [
+          "A file named `google-fonts-<timestamp>.css—this will contain the CSS snippets that you need to copy in your app. You may need to update the paths to the font files.",
+          "A directory structure looking like this: `fonts/<font-name>/<version>/<font-file>`"
+        ]
+      }
+    ]
   }
 }
