--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "url"
   ],
   "license": "MIT",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ionică Bizău <bizauionica@gmail.com> (https://ionicabizau.net)",
+  "author": "Bloggify <support@bloggify.org> (https://bloggify.org)",
   "homepage": "https://github.com/Bloggify/google-font-downloader#readme",
   "files": [
     "bin/",
