Add documentation to blah-field in package.json (as mentioned in README.MD:1)

--- a/package.json
+++ b/package.json
@@ -75,6 +75,16 @@
         ]
       },
       {
+        "p": "There are several options:"
+      },
+      {
+        "ul": [
+          "`--directory`: Directory where files are stored",
+          "`--timestamp`: Add a timestamp to the stylesheet file (default: 1)",
+          "`--scss`: Use a scss-extension for the stylesheet for inclusion in a scss-project (default: 0)"
+        ]
+      },
+      {
         "img": {
           "title": "Example",
           "source": "https://i.imgur.com/yGcOPKg.gif"
